--- a/ForgedAllianceFullscreen.Console/ForgedAllianceFullscreen.Console.csproj
+++ b/ForgedAllianceFullscreen.Console/ForgedAllianceFullscreen.Console.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,11 +6,10 @@
     <Nullable>enable</Nullable>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
-
+  <Import Project="..\ForgedAllianceFullscreen.Shared\ForgedAllianceFullscreen.Shared.projitems" Label="Shared" />
 </Project>
